# rate_position_controller

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
config/: haptic_device.yaml  phantom_omni.yaml
launch/: haptic_device_master.launch  phantom_master.launch  rate_position.launch
scripts/: bubble_technique.py  draw_control_regions.py  haptic_device_interface.py  rate_position_controller.py  workspace_indexing.py
