<?xml version="1.0"?>
<package>
  <name>rate_position_controller</name>
  <description>The rate_position_controller package</description>

  <version>0.1.0</version>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/fsuarez6/rate_position_controller</url>
  <url type="repository">https://github.com/fsuarez6/rate_position_controller</url>
  <author>Francisco Suarez-Ruiz</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>omni_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>omni_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
